# artoo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASING.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: publish.yml
.somm/: calls.sqlite  service_token
docs/: index.html
site/landing/: artifact.toml
src/artoo/: __init__.py  build.py  cli.py  discover.py  firewall.py  manifest.py  research.py  scaffold.py  vizier.py  workers.py
src/artoo/deploy/: __init__.py  base.py  command.py  github_pages.py  rsync.py
src/artoo/generators/: __init__.py
src/artoo/generators/explainer/: __init__.py  inventory.py  prompts.py  templates.py
src/artoo/libraries/: __init__.py
src/artoo/libraries/kit/: __init__.py
src/artoo/libraries/kit/assets/: components.css
tests/: conftest.py  test_build.py  test_cli.py  test_deploy_command.py  test_deploy_github_pages.py  test_deploy_rsync.py  test_discover.py  test_explainer.py  test_firewall.py  test_inventory.py  test_libraries.py  test_manifest.py  test_vizier.py  test_workers.py
